plugins {
	id 'java'
	id 'application'
	id 'org.openjfx.javafxplugin' version '0.0.9'
	id 'org.beryx.jlink' version '2.22.0'
}

java {
	// jdk 14
	sourceCompatibility = JavaVersion.VERSION_14;
	targetCompatibility = JavaVersion.VERSION_14;
}

group 'org.beuwi.msgbots'

javafx {
	version = '14'
	modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.web' ]
}

application {
	mainClassName = "org.beuwi.msgbots.Launcher"
}

repositories {
	mavenCentral()
	jcenter()
}

dependencies {
	implementation group: 'com.jfoenix', name: 'jfoenix', version: '9.0.10'
}

compileJava {
	options.encoding = "UTF-8"
	options.compilerArgs << "-Xlint:none"
}

run {
	jvmArgs '--add-exports', 'javafx.base/com.sun.javafx.event=ALL-UNNAMED',
			'--add-exports', 'javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED',
			'--add-exports', 'javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED',
			'--add-exports', 'javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED'
}


jlink {
	options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']

	launcher {
		name = 'Simulator'
	}

	jpackage {
		imageOptions += ['--icon', 'src/main/resources/icons/program.ico']

		/* installerOptions = [
				'--vendor', 'beuwi',
				'--app-version', '0.5.0',
		] */
	}
}

jar {
	manifest {
		attributes 'Main-Class': 'org.beuwi.msgbots.Launcher'
	}

	/* from {
		configurations.compile.collect {
			it.isDirectory() ? it : zipTree(it)
		}
	} */
}